--- a/styles/index.css
+++ b/styles/index.css
@@ -13,12 +13,13 @@
     --clr-white: 0 0% 100%;
     --clr-gray: 0 2% 8%;
     --clr-blue: 193 100% 51%;
+    --clr-yellow: 60 82 46;
 
     /* font sizes */
     --fs-1000: 3.7rem; 
     --fs-900: 2.5rem;
     --fs-800: 4rem;
-    --fs-700: 2rem; 
+    --fs-700: 1.5rem;
     --fs-600: 2.5rem;
     --fs-500: 1.5rem;
     --fs-400: 1.25rem; 
@@ -44,7 +45,7 @@
         --fs-1000: clamp(3.7rem, 5vw + 1rem, 8.7rem);
         --fs-900: clamp(2.5rem,2vw + 2rem,6rem);
         --fs-800: 4rem;
-        --fs-700: 3rem;
+        --fs-700: clamp(1.5rem, 2vw + 0.5rem, 3rem);;
         --fs-600: 2.5rem;
         --fs-500: clamp(0.5rem,2vw + 0.2rem,2rem);
         --fs-400: 2rem;
@@ -92,7 +93,7 @@ ol {
 
 /* Set core body defaults */
 body {
-    display: grid;
+    /* display: grid; */
     grid-template-rows: min-content 1fr;
     min-height: 100vh;
     margin:0;
@@ -283,6 +284,10 @@ textarea:not([rows]) {
 
 .text-light {
     color: hsl(var(--clr-white) / 80%);
+}
+
+.text-yellow {
+    color: hsl(var(--clr-yellow));
 }
 
 /* typography */
@@ -741,11 +746,227 @@ textarea:not([rows]) {
 
 .big-text{
     padding-inline: clamp(1.25rem, 7vw, 10rem);
-    margin: 10rem 0;
+    margin: 30rem 0;
     text-align: center; 
 }
 
-@media (width >= 45em) {
+
+/*  galerija */
+
+.gallery {
+    display: grid;
+    gap: 4rem;
+    padding-inline: clamp(1.25rem, 7vw, 10rem);
+  }
+
+.category  {
+    width: 75%;
+    margin: 0 auto;
+}
+
+.category a{
+    position:relative;
+    display: block;
+    filter:grayscale(100%);
+    transition: filter 500ms ease-in-out;
+
+}
+
+.category:nth-child(odd) {
+    margin-right: 0;
+}
+
+.category:nth-child(even) {
+    margin-left: 0;
+}
+
+.category a::after {
+    position: absolute;
+    top: -1rem;
+    right: -1rem;
+    z-index: -1;
+    width: 50%;
+    aspect-ratio: 1;
+    content: '';
+    background-color: hsl(var(--clr-blue));
+    opacity:var(--image-backdrop-opacity, 0.2);
+    
+
+    /* transform: translateX(2rem); */
+}
+
+.category a:hover {
+    --image-backdrop-opacity: 1;
+    
+    filter:grayscale(0);
+
+    /* transform: translateX(2rem); */
+}
+
+
+/* web steps */
+
+.web-solutions {
+    display: grid;
+    gap: 6rem;
+    padding-inline: clamp(1.25rem, 7vw, 10rem);
+  }
+
+.web-steps  {
+    position: relative;
+    width: 95%;
+    padding: 2rem;
+    padding-bottom: 2rem;
+    margin: 0 auto;
+    background-color: hsl(var(--clr-dark));
+    border: 1px solid hsl(var(--clr-white));
+
+    --gap:0.75rem
+}
+
+.web-steps::after  {
+    position: absolute;
+    top: -1.5rem;
+    right: -1.5rem;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    content: '';
+    background-color: hsl(var(--clr-blue))
+
+}
+
+
+.step-title > span{
+    /* height: 100%;
+    padding: 1rem;
+    border: 1px solid hsl(var(--clr-blue));
+    border-radius:1.5rem; */
+    align-self: center;
+    opacity: 0.7;
+}
+
+.step-title > h3 {
+    position: relative;
+    margin: 0;
+}
+
+.step-title > h3::after {
+    position: absolute;
+    right: 0;
+    bottom: -0.5rem;
+    display: block;
+    width: 50%;
+    height: 1px;
+    content: '';
+    background-color: hsl(var(--clr-blue));
+}
+
+/* stylelint-disable-next-line no-descending-specificity */
+.web-steps > p {
+    padding-top: 1rem;
+}
+
+/* .web-steps:nth-child(odd) {   
+    background-color: rgb(58 197 255 / 30%) !important
+} */
+
+/* .step-title > h3::before {
+    position: absolute;
+    top: -0.5rem;
+    left: 0;
+    display: block;
+    width: 50%;
+    height: 1px;
+    content: '';
+    background-color: hsl(var(--clr-blue));
+} */
+
+/* web examples */
+
+.web-example-title {
+    margin-top: 20rem;
+    margin-bottom: 2rem;
+}
+
+.web-examples {
+    position: relative;
+    width: 60%;
+    height: 100vh;
+    padding-top: 1rem;
+    margin:0 auto;
+    overflow: hidden ;
+    text-align: center;
+    border: 1px solid hsl(var(--clr-yellow));
+    border-top: unset
+}
+
+.web-examples::after{
+    position: absolute;
+    top:0;
+    left: 0;
+    z-index: 2;
+    display: block;
+    width: 100%;
+    height: 1rem;
+    content: '';
+    background-color: hsl(var(--clr-dark));
+}
+
+.web-examples::before{
+    position: absolute;
+    top:0;
+    left: 0;
+    z-index: 3;
+    display: block;
+    width: 20%;
+    height: 1rem;
+    content: '';
+    background-color: hsl(var(--clr-yellow));
+    animation: image-timeline 25s linear infinite;
+}
+
+.example {
+    background-color: hsl(var(--clr-blue));
+    animation: imagescroll 25s linear infinite;
+}
+
+.web-examples span {
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@keyframes imagescroll {
+    0%{
+        transform: translate(0);
+    }
+
+    99% {
+        transform: translateY(-100%);
+    }
+
+    100% {
+        transform: translate(0);
+    }
+}
+
+@keyframes image-timeline {
+    0%{
+        width: 0;
+    }
+
+    99% {
+        width: 100%;
+    }
+
+    100% {
+        width: 0;
+    }
+}
+
+/* stylelint-disable-next-line media-feature-range-notation */
+@media (min-width: 45em) {
     .grid-container--hero {
         grid-template-areas:
             'content image';
@@ -780,8 +1001,34 @@ textarea:not([rows]) {
         display: block;
     }
 
-}
+    .gallery {
+        grid-template-columns: 50% 50% ;
+      }
 
+      .category  {
+        width: 50%;
+        margin: 0 auto;
+    }
+
+    .web-solutions {
+        gap: 10rem;
+      }
+
+    .web-steps {
+        --gap:2rem;
+
+        width: 45%;
+    }
+
+    .web-steps:nth-child(odd) {
+        margin-left: 0;
+    }
+    
+    .web-steps:nth-child(even) {
+        margin-right: 0;
+    }
+
+}
 
 @media (width >= 35em) {
     .about-me .numbered-data{
@@ -789,3 +1036,4 @@ textarea:not([rows]) {
         justify-content: space-around;
     }
 }
+
