--- a/styles/index.css
+++ b/styles/index.css
@@ -174,6 +174,14 @@ textarea:not([rows]) {
     }
 }
 
+.grecaptcha-badge{
+    display: none !important;
+}
+
+
+input:-internal-autofill-selected {
+    background-color: transparent !important;
+}
 
 /* -------------------- */
 
